<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.login.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/sign_in_image_back"
        android:src="@drawable/baseline_arrow_back_ios_32"
        android:tint="@color/black"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@id/guideline_v1_sign_in"
        app:layout_constraintEnd_toEndOf="@id/guideline_v2_1_sign_in"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h1_1_sign_in"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_sign_in_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:src="@drawable/img_1"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h2_sign_in"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline_v5_sign_in"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guideline_v1_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h1_1_sign_in" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/baseline_email_24"
        app:layout_constraintStart_toStartOf="@id/guideline_v1_sign_in"
        app:layout_constraintEnd_toEndOf="@id/guideline_v5_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h4_1_sign_in"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h5_sign_in"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/primary"
            android:hint="@string/sign_in_username_hint_text"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:layout_constraintStart_toStartOf="@id/guideline_v1_sign_in"
        app:layout_constraintEnd_toEndOf="@id/guideline_v5_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h5_1_sign_in"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h6_sign_in"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/primary"
            android:hint="@string/sign_in_password_hint_text"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sign_in_forget_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/sign_in_password_reset"
        android:gravity="end"
        app:layout_constraintStart_toStartOf="@id/guideline_v1_sign_in"
        app:layout_constraintEnd_toEndOf="@id/guideline_v5_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h6_1_sign_in"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h6_2_sign_in"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_primary"
        android:text="@string/sign_in_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/guideline_v2_sign_in"
        app:layout_constraintEnd_toEndOf="@id/guideline_v4_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h8_sign_in"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h9_sign_in"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h11_sign_in"
        app:layout_constraintEnd_toEndOf="@id/guideline_v5_sign_in"
        app:layout_constraintStart_toStartOf="@id/guideline_v1_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h10_sign_in"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sign_in_text_not_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_not_have_account"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp"
            app:layout_constraintVertical_bias="0.461"
            android:textSize="16sp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sign_in_text_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_in_signup_text"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
             />

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView_loading_sign_in"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:lottie_rawRes="@raw/loading_animation"
        app:lottie_autoPlay="false"
        app:lottie_loop="true"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline1"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h1_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h1_1_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h2_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h3_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h4_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h4_1_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h5_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.56" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h5_1_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.59" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h6_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.68" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h6_1_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h6_2_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h8_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.81" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h9_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.865" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h10_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h11_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v1_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v2_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v2_1_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.17" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v3_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v4_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v5_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

</androidx.constraintlayout.widget.ConstraintLayout>
