<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignUpActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/sign_up_image_back"
        android:src="@drawable/baseline_arrow_back_ios_32"
        android:tint="@color/black"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@id/guideline_v1_signup"
        app:layout_constraintEnd_toEndOf="@id/guideline_v2_1_signup"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h1_1_signup"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_onboarding_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:src="@drawable/img_1"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h2_signup"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline_v5_signup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guideline_v1_signup"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h1_1_signup" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/baseline_email_24"
        app:layout_constraintStart_toStartOf="@id/guideline_v1_signup"
        app:layout_constraintEnd_toEndOf="@id/guideline_v5_signup"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h3_signup"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h4_signup"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/primary"
            android:hint="@string/signup_email_hint_text"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:layout_constraintStart_toStartOf="@id/guideline_v1_signup"
        app:layout_constraintEnd_toEndOf="@id/guideline_v5_signup"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h4_1_signup"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h5_signup"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/primary"
            android:hint="@string/signup_password_hint_text"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:layout_constraintStart_toStartOf="@id/guideline_v1_signup"
        app:layout_constraintEnd_toEndOf="@id/guideline_v5_signup"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h5_1_signup"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h6_signup"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_edittext_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/primary"
            android:hint="@string/signup_password_hint_text"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox_child"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:checked="false"
        android:theme="@style/checkBoxStyle"
        android:buttonTint="@color/primary"
        android:text="@string/signup_text_terms_and_conditions"
        app:layout_constraintStart_toStartOf="@id/guideline_v1_signup"
        app:layout_constraintEnd_toEndOf="@id/guideline_v5_signup"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h6_1_signup"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h6_2_signup"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_primary"
        android:text="@string/signup_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/guideline_v2_signup"
        app:layout_constraintEnd_toEndOf="@id/guideline_v4_signup"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h8_signup"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h9_signup"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h11_signup"
        app:layout_constraintEnd_toEndOf="@id/guideline_v5_signup"
        app:layout_constraintStart_toStartOf="@id/guideline_v1_signup"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h10_signup"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signup_text_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_text_have_account"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginEnd="10dp"
            app:layout_constraintVertical_bias="0.461" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signup_text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signup_text_login"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView_loading_signup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:lottie_rawRes="@raw/loading_animation"
        app:lottie_autoPlay="false"
        app:lottie_loop="true"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline1"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h1_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h1_1_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h2_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h3_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h4_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h4_1_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h5_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.56" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h5_1_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.59" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h6_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.68" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h6_1_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h6_2_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h8_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.81" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h9_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.865" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h10_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h11_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v1_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v2_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v2_1_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v3_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v4_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v5_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

</androidx.constraintlayout.widget.ConstraintLayout>